Update code so we make sure to target out of boundaries dates

--- a/src/components/CalendarCell.css
+++ b/src/components/CalendarCell.css
@@ -3,6 +3,10 @@
   padding: 7px 0;
 }
 
+.calendar-cell.out-boundaries {
+  opacity: 0.3;
+}
+
 .calendar-cell.weekday {
   background-color: green;
 }
